<resources>
    <string name="app_name">IQMobile</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="login_user">Username</string>
    <string name="login_lable_passowrd">Password</string>
    <string name="button_login">Log In</string>
    <string name="label_app_name">IQMobile</string>
    <string name="label_disclaimer">discalimer</string>
    <string name="label_device_title">Device Setup</string>
    <string name="label_device_serial">Serial</string>
    <string name="label_device_code">Code</string>
    <string name="label_device_facilityname">Facility Name</string>
    <string name="label_device_facilitycode">Facility Code</string>
    <string name="button_edit">Edit</string>
    <string name="button_Save">Save</string>
    <string name="lable_new_patient_registration">New Patient</string>
    <string name="lable_find_patient">Find Patient</string>
    <string name="label_exit">Exit</string>
    <string name="label_get_device">Device Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="validation_password">Password is required</string>
    <string name="validation_first_name">First Name required</string>
    <string name="validation_last_name">Last Name required</string>
    <string name="validation_dob">Date of Birth required</string>
    <string name="validation_date">Date cannot be in future</string>
    <string name="validation_contact_Cell">Telephone required</string>
    <string name="validation_contact_Cell_len">Valid Telephone required</string>
    <string name="validation_client_code">Patient ID required</string>
    <string name="validation_client_code_number">Only numbers are allowed</string>
    <string name="validation_age">Valid age required</string>
    <string name="validation_other_relation">specify other required</string>
    <string name="patient_image_description">Patient</string>
    <string name="delete_patient_description">delete patient</string>
    <string name="iqmobile_logo">IQMobile Logo</string>
    <string name="title_login">" Login"</string>
    <string name="title_demographics">" Demographics"</string>
    <string name="title_contact">" Contact Information"</string>
    <string name="title_service">" Service Registration"</string>
    <string name="title_dashboard">" IQMobile Dashboard"</string>
    <string name="title_sync">" Sync"</string>
    <string name="title_register">" Patient Registration"</string>
    <string name="title_findadd">" Patients"</string>
    <string name="title_patient_home">" Patient Dashboard"</string>
    <string name="title_patient_observation">" HTS Module"</string>
    <string name="title_device">Device Setup</string>
    <string name="title_activity_observationlist">Questions</string>


</resources>
