<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical">

        <include
            android:id="@+id/login_toolbar"
            layout="@layout/toolbar" />

        <RelativeLayout
            android:id="@+id/layout_login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.73">

            <ImageView
                android:id="@+id/imageViewIQM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/iqmobile_logo"
                android:src="@drawable/iqm" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/layout_login_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTestingPoint"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="Service Area"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <Spinner
                android:id="@+id/spinnerTestingPoint"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />



            <TextView
                android:id="@+id/textViewUsername"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/login_user"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinnerUsers"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_login_action"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_weight="1.88"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textViewError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#f90303" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@color/primary_dark"
                android:text="@string/button_login"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/imageViewPartner"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/imageViewGok"
                android:layout_toStartOf="@+id/imageViewGok"
                android:contentDescription="Partner Logo"
                android:visibility="visible"
                android:src="@drawable/ic_knh" />

            <ImageView
                android:id="@+id/imageViewGok"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="UON Logo"
                android:visibility="visible"
                android:src="@drawable/ic_uon" />

            <ImageView
                android:id="@+id/imageViewPalladium"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="Palladium Logo"
                android:scaleType="fitCenter"
                android:visibility="visible"
                android:src="@drawable/ic_palladium"
                />
            />
        </LinearLayout>
    </LinearLayout>
</ScrollView>